force-app/main/default/objects/QuoteLineItem/fields/Partner_Margin_Detail__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin_Detail__c</fullName>
    <description>JSON audit trail showing which partners contributed margins and their percentages. Used for transparency and debugging.</description>
    <inlineHelpText>Detailed breakdown of margin contributions from each partner.</inlineHelpText>
    <label>Partner Margin Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>