force-app/main/default/objects/QuoteLineItem/fields/Partner_Pricing_Model_Applied__c.field-meta.xml
<CustomField>
    <fullName>Partner_Pricing_Model_Applied__c</fullName>
    <description>The partner pricing model that was applied to this line item.</description>
    <inlineHelpText>Which pricing model was used: Guaranteed Margin or Discount.</inlineHelpText>
    <label>Partner Pricing Model Applied</label>
    <length>50</length>
    <type>Text</type>
</CustomField>