force-app/main/default/objects/QuoteLineItem/fields/Partner_Pricing_Warning__c.field-meta.xml
<CustomField>
    <fullName>Partner_Pricing_Warning__c</fullName>
    <description>Warning message displayed when selected partners are missing the required pricing model configuration. For example, if the Quote uses &quot;Guaranteed Margin&quot; but a partner only has a &quot;Discount&quot; model configured.</description>
    <inlineHelpText>Warning: One or more partners may not be participating in the pricing calculation.</inlineHelpText>
    <label>Partner Pricing Warning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>