force-app/main/default/objects/QuoteLineItem/fields/pGroup__c.field-meta.xml
<CustomField>
    <fullName>pGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An attribute that drives pricing for several Power products.</description>
    <label>pGroup</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (pGroup)</relationshipLabel>
    <relationshipName>Quote_Line_Items_pGroup</relationshipName>
    <type>Lookup</type>
</CustomField>