force-app/main/default/objects/QuoteLineItem/fields/pGroup_Applied__c.field-meta.xml
<CustomField>
    <fullName>pGroup_Applied__c</fullName>
    <description>The pGroup value that was applied during pricing (P05-P50)</description>
    <inlineHelpText>The pGroup code applied during hardware pricing</inlineHelpText>
    <label>pGroup Applied</label>
    <length>10</length>
    <type>Text</type>
</CustomField>