force-app/main/default/objects/QuoteLineItem/fields/Postpaid_Service__c.field-meta.xml
<CustomField>
    <fullName>Postpaid_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postpaid Service</label>
    <type>Checkbox</type>
</CustomField>