force-app/main/default/objects/QuoteLineItem/fields/Pre_COLA_Price__c.field-meta.xml
<CustomField>
    <fullName>Pre_COLA_Price__c</fullName>
    <description>Original Asset.Price before COLA application - used for override recalculations</description>
    <inlineHelpText>The original subscription price from the Asset before COLA was applied.</inlineHelpText>
    <label>Pre-COLA Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>