force-app/main/default/objects/QuoteLineItem/fields/Pre_Hardware_Price__c.field-meta.xml
<CustomField>
    <fullName>Pre_Hardware_Price__c</fullName>
    <description>The price before hardware attribute-based pricing was applied</description>
    <inlineHelpText>The unit price before hardware multipliers were applied</inlineHelpText>
    <label>Pre Hardware Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>