force-app/main/default/objects/QuoteLineItem/fields/Pre_Partner_Price__c.field-meta.xml
<CustomField>
    <fullName>Pre_Partner_Price__c</fullName>
    <description>The unit price before partner pricing adjustments. Captures the price after Regional Pricing has been applied.</description>
    <inlineHelpText>Original price before partner adjustments were applied.</inlineHelpText>
    <label>Pre-Partner Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>