force-app/main/default/objects/QuoteLineItem/fields/PrehookRSNetUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>PrehookRSNetUnitPrice__c</fullName>
    <description>Calculated net unit price after regional pricing multiplier applied. Written by RegionalServicesPricingPrehook and read by Pricing Procedure Assignment step.</description>
    <inlineHelpText>The adjusted price after applying the regional pricing multiplier for the shipping country.</inlineHelpText>
    <label>Prehook RS Net Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>