force-app/main/default/objects/QuoteLineItem/fields/Price_Mode__c.field-meta.xml
<CustomField>
    <fullName>Price_Mode__c</fullName>
    <description>Price Mode is captured from adjacent Price Adjustment Tier if applicable. The values would be Unit Price, Total Price or Calculated</description>
    <label>Price Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>