force-app/main/default/objects/QuoteLineItem/fields/Prior_Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Partner_Discount__c</fullName>
    <description>Maintenance (derived) pricing: the partner discount on this maintenance line expressed as a DOLLAR amount. On a renewal line it holds the prior period&apos;s partner discount (carried forward from the originating order line) before the COLA uplift the renewal formula applies. FORTRA-PRODUCT-018.</description>
    <inlineHelpText>Partner discount on the maintenance line in dollars; on renewals, the prior-period value carried forward (pre-COLA).</inlineHelpText>
    <label>Prior Partner Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>