force-app/main/default/objects/QuoteLineItem/fields/QLI_NARR__c.field-meta.xml
<CustomField>
    <fullName>QLI_NARR__c</fullName>
    <label>QLI NARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>