force-app/main/default/objects/QuoteLineItem/fields/Quantity_UOM__c.field-meta.xml
<CustomField>
    <fullName>Quantity_UOM__c</fullName>
    <formula>TEXT(Quantity) &amp; &quot; &quot; &amp; TEXT(Product2.QuantityUnitOfMeasure)</formula>
    <label>Quantity UOM</label>
    <type>Text</type>
</CustomField>