force-app/main/default/objects/QuoteLineItem/fields/Quote_Line_ARR__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_ARR__c</fullName>
    <label>QLI NARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>