force-app/main/default/objects/QuoteLineItem/fields/Regional_NetUnit_Price__c.field-meta.xml
<CustomField>
    <fullName>Regional_NetUnit_Price__c</fullName>
    <label>Regional NetUnit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>