force-app/main/default/objects/QuoteLineItem/fields/RegionalPricingExplainerItem__c.field-meta.xml
<CustomField>
    <fullName>RegionalPricingExplainerItem__c</fullName>
    <description>Decision explainer text for regional pricing shown in Pricing Waterfall. Example: &quot;Regional Services Multiplier: 0.96&quot;</description>
    <inlineHelpText>Shows the regional pricing multiplier applied to this line item for transparency in the Pricing Waterfall.</inlineHelpText>
    <label>Regional Pricing Explainer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>