force-app/main/default/objects/QuoteLineItem/fields/Replaced_Asset__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Asset being replaced, upgraded, or converted by this Quote Line Item. When populated, the Displaced_ARR__c field will automatically calculate using the referenced Asset&apos;s ARR value. Used for swap/upgrade scenarios (e.g., on-premise to SaaS conversion).</description>
    <label>Replaced Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Replacement Quote Lines</relationshipLabel>
    <relationshipName>Replacement_Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>