force-app/main/default/objects/QuoteLineItem/fields/Requires_New_Hardware__c.field-meta.xml
<CustomField>
    <fullName>Requires_New_Hardware__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating this quote line requires new hardware to be created by the Order team</description>
    <label>Requires New Hardware</label>
    <type>Checkbox</type>
</CustomField>