force-app/main/default/objects/QuoteLineItem/fields/Sales_Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Support_Notes__c</fullName>
    <description>Text field to add a line item level note. Restricted to Customer Ops. and Services Ops. Long Text.</description>
    <label>Sales Support Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>