force-app/main/default/objects/QuoteLineItem/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Serial number for hardware. Text field.</description>
    <label>Serial Number</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (Serial Number)</relationshipLabel>
    <relationshipName>Quote_Line_Items_Serial</relationshipName>
    <type>Lookup</type>
</CustomField>