force-app/main/default/objects/QuoteLineItem/fields/Services_Hourly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Services_Hourly_Rate__c</fullName>
    <description>If the product being sold is an hourly T&amp;M services SKU, this field shows the hourly bill rate</description>
    <inlineHelpText>If the product being sold is an hourly T&amp;M services SKU, this field shows the hourly bill rate</inlineHelpText>
    <label>Services Hourly Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>