force-app/main/default/objects/QuoteLineItem/fields/Source_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Source_List_Price__c</fullName>
    <description>Source license list price stamped by Flow for derived maintenance line pricing. Read by Rev_Mgmt Derived Pricing Formula.</description>
    <inlineHelpText>List price of the contributing license product, stamped automatically for maintenance/support lines.</inlineHelpText>
    <label>Source List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>