force-app/main/default/objects/QuoteLineItem/fields/Swap__c.field-meta.xml
<CustomField>
    <fullName>Swap__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Related to Displaced ARR - enables the Displaced ARR field to type in a dollar amount.</description>
    <label>Swap?</label>
    <type>Checkbox</type>
</CustomField>