force-app/main/default/objects/QuoteLineItem/fields/System_Type__c.field-meta.xml
<CustomField>
    <fullName>System_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attribute - (dropdown: Staging, Production or Test -- drives pricing for some products. Also used to group products on Quote template.</description>
    <label>System Type</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (System Type)</relationshipLabel>
    <relationshipName>Quote_Line_Items_System_Type</relationshipName>
    <type>Lookup</type>
</CustomField>