force-app/main/default/objects/QuoteLineItem/fields/System_Type_Applied__c.field-meta.xml
<CustomField>
    <fullName>System_Type_Applied__c</fullName>
    <description>The system type value that was applied during pricing</description>
    <inlineHelpText>The system type applied during hardware pricing (Production, Staging, Test)</inlineHelpText>
    <label>System Type Applied</label>
    <length>50</length>
    <type>Text</type>
</CustomField>