force-app/main/default/objects/QuoteLineItem/fields/System_Type_Source__c.field-meta.xml
<CustomField>
    <fullName>System_Type_Source__c</fullName>
    <description>Indicates the source of the Server Type value: Hardware Default (from linked Hardware__c record) or User Override (manually selected in configurator).</description>
    <label>System Type Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware Default</fullName>
            </value>
            <value>
                <fullName>User Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>