force-app/main/default/objects/QuoteLineItem/fields/Two_Years_After_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Two_Years_After_Start_Date__c</fullName>
    <formula>AND(EndDate - StartDate &gt; 365, EndDate - StartDate &lt; 730)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Two Years After Start Date</label>
    <type>Checkbox</type>
</CustomField>