force-app/main/default/objects/QuoteLineItem/fields/Unique_Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Product_Identifier__c</fullName>
    <description>Concatenation of Product Code from related Product and Quote Line Item&apos;s Line Item Description</description>
    <formula>Product2.ProductCode + &quot;:&quot; +  Description</formula>
    <inlineHelpText>Concatenation of Product Code from related Product and Quote Line Item&apos;s Line Item Description</inlineHelpText>
    <label>Unique Product Identifier</label>
    <type>Text</type>
</CustomField>