force-app/main/default/objects/QuoteLineItem/fields/Users_Per_Partition__c.field-meta.xml
<CustomField>
    <fullName>Users_Per_Partition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attribute - equivalent to Qty of Users, but a separate field to drive pricing. Might be able to eliminate via price rules + attributes. Specific to Power.</description>
    <label>Users Per Partition</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Quote Line Items (Users Per Partition)</relationshipLabel>
    <relationshipName>Quote_Line_Items_Users_Per_Partition</relationshipName>
    <type>Lookup</type>
</CustomField>