force-app/main/default/objects/QuoteLineItem/fields/Users_Per_Partition_Applied__c.field-meta.xml
<CustomField>
    <fullName>Users_Per_Partition_Applied__c</fullName>
    <description>The users per partition value that was applied during pricing</description>
    <inlineHelpText>Number of users per partition used for tier multiplier calculation</inlineHelpText>
    <label>Users Per Partition Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>