force-app/main/default/objects/QuoteLineItem/fields/Users_Per_Partition_Source__c.field-meta.xml
<CustomField>
    <fullName>Users_Per_Partition_Source__c</fullName>
    <description>Indicates the source of the Users Per Partition value: Hardware Default (from linked Hardware__c record) or User Override (manually entered in configurator).</description>
    <label>Users Per Partition Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardware Default</fullName>
            </value>
            <value>
                <fullName>User Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>