force-app/main/default/objects/QuoteLineItem/fields/Year_After_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Year_After_StartDate__c</fullName>
    <formula>EndDate - StartDate &lt;= 365</formula>
    <label>Year After StartDate</label>
    <type>Checkbox</type>
</CustomField>